(decompose_hangul, combine_hangul): New. (combine, _g_utf8_normalize_wc): Use them. Adds support for algorithmic composition of Hangul Syllables, adapted from a patch written by Noah Levitt <nlevitt@columbia.edu> for GLIB, discussed in <http://bugzilla.gnome.org/show_bug.cgi?id=100456> and available from <http://bugzilla.gnome.org/showattachment.cgi?attach_id=18915>.